Haciendo que las imágenes se vean bien

--- a/2bach.html
+++ b/2bach.html
@@ -94,11 +94,20 @@
                         href="generic.html"
                         class="image"
                     >
-                        <img
-                            src="images/pic08.jpg"
-                            alt=""
-                            data-position="center center"
-                        />
+                        <picture>
+                            <source
+                                srcset="assets/img/pic08.webp"
+                                type="image/webp"
+                            />
+                            <source
+                                srcset="assets/img/pic08.jpg"
+                                type="image/jpg"
+                            />
+                            <img
+                                src="assets/img/pic08.jpg"
+                                alt=""
+                            />
+                        </picture>
                     </a>
                     <div class="content">
                         <div class="inner">
@@ -123,11 +132,20 @@
                         href="generic.html"
                         class="image"
                     >
-                        <img
-                            src="images/pic09.jpg"
-                            alt=""
-                            data-position="top center"
-                        />
+                        <picture>
+                            <source
+                                srcset="assets/img/pic09.webp"
+                                type="image/webp"
+                            />
+                            <source
+                                srcset="assets/img/pic09.jpg"
+                                type="image/jpg"
+                            />
+                            <img
+                                src="assets/img/pic09.jpg"
+                                alt=""
+                            />
+                        </picture>
                     </a>
                     <div class="content">
                         <div class="inner">
@@ -152,11 +170,20 @@
                         href="generic.html"
                         class="image"
                     >
-                        <img
-                            src="images/pic10.jpg"
-                            alt=""
-                            data-position="25% 25%"
-                        />
+                        <picture>
+                            <source
+                                srcset="assets/img/pic10.webp"
+                                type="image/webp"
+                            />
+                            <source
+                                srcset="assets/img/pic10.jpg"
+                                type="image/jpg"
+                            />
+                            <img
+                                src="assets/img/pic10.jpg"
+                                alt=""
+                            />
+                        </picture>
                     </a>
                     <div class="content">
                         <div class="inner">
@@ -177,8 +204,6 @@
                     </div>
                 </section>
             </section>
-
-
 
             <!-- Footer -->
             <footer id="footer">
