--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					</li>
 					<li>
 						<a
-							href="#"
+							href="https://www.facebook.com/José-Ramón-Rico-100478855605394"
 							class="icon brands alt fa-facebook-f"
 						><span class="label">Facebook</span></a>
 					</li>
