404 page and footer added

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</span>
 					<header class="major">
 						<h3><a
-								href="landing.html"
+								href="not-found.html"
 								class="link"
 							>Programación</a></h3>
 						<p>Ipsum dolor sit amet</p>
@@ -126,7 +126,7 @@
 					</span>
 					<header class="major">
 						<h3><a
-								href="landing.html"
+								href="not-found.html"
 								class="link"
 							>Lecturas</a></h3>
 						<p>feugiat amet tempus</p>
@@ -238,32 +238,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
-				<ul class="icons">
-					<li>
-						<a
-							href="#"
-							class="icon brands alt fa-twitter"
-						><span class="label">Twitter</span></a>
-					</li>
-					<li>
-						<a
-							href="https://www.facebook.com/José-Ramón-Rico-100478855605394"
-							class="icon brands alt fa-facebook-f"
-						><span class="label">Facebook</span></a>
-					</li>
-					<li>
-						<a
-							href="#"
-							class="icon brands alt fa-instagram"
-						><span class="label">Instagram</span></a>
-					</li>
-					<li>
-						<a
-							href="#"
-							class="icon brands alt fa-github"
-						><span class="label">GitHub</span></a>
-					</li>
-				</ul>
+
 				<ul class="copyright">
 					<li>&copy; Departamento de música</li>
 					<li>Design: José Ramón Rico</li>
