not-found page added

--- a/1eso.html
+++ b/1eso.html
@@ -101,7 +101,7 @@
             >
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -130,7 +130,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="unidades.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
@@ -139,7 +139,7 @@
                 </section>
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -168,7 +168,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="generic.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
@@ -177,7 +177,7 @@
                 </section>
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -206,7 +206,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="generic.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
