--- a/2bach.html
+++ b/2bach.html
@@ -52,9 +52,9 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="unidades.html">Unidades</a></li>
-                <li><a href="recursos.html">Recursos</a></li>
-                <li><a href="vídeos.html">Vídeos</a></li>
+                <li><a href="not-found.html">Unidades</a></li>
+                <li><a href="not-found.html">Recursos</a></li>
+                <li><a href="not-found.html">Vídeos</a></li>
             </ul>
         </nav>
 
@@ -91,7 +91,7 @@
             >
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -120,7 +120,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="unidades.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
@@ -129,7 +129,7 @@
                 </section>
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -158,7 +158,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="generic.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
@@ -167,7 +167,7 @@
                 </section>
                 <section>
                     <a
-                        href="generic.html"
+                        href="not-found.html"
                         class="image"
                     >
                         <picture>
@@ -196,7 +196,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="generic.html"
+                                        href="not-found.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
