--- a/videos1e.html
+++ b/videos1e.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Generic - Forty by HTML5 UP</title>
+    <title>Vídeos - 1º ESO</title>
     <meta charset="utf-8" />
     <meta
         name="viewport"
@@ -34,7 +34,7 @@
             <a
                 href="index.html"
                 class="logo"
-            ><strong>Forty</strong> <span>by HTML5 UP</span></a>
+            ><strong>Música</strong> <span>IES Santos Isasa</span></a>
             <nav>
                 <a href="#menu">Menu</a>
             </nav>
@@ -43,20 +43,10 @@
         <!-- Menu -->
         <nav id="menu">
             <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="landing.html">Landing</a></li>
-                <li><a href="generic.html">Generic</a></li>
-                <li><a href="elements.html">Elements</a></li>
-            </ul>
-            <ul class="actions stacked">
-                <li><a
-                        href="#"
-                        class="button primary fit"
-                    >Get Started</a></li>
-                <li><a
-                        href="#"
-                        class="button fit"
-                    >Log In</a></li>
+                <li><a href="1eso.html">Atrás</a></li>
+                <li><a href="unidades.html">Unidades</a></li>
+                <li><a href="recursos.html">Recursos</a></li>
+                <li><a href="vídeos.html">Vídeos</a></li>
             </ul>
         </nav>
 
@@ -70,35 +60,46 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h1>Generic</h1>
+                        <h1>Vídeos</h1>
                     </header>
-                    <span class="image main"><img
-                            src="images/pic11.jpg"
-                            alt=""
-                        /></span>
-                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-                        venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim
-                        auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque
-                        in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar
-                        mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque
-                        enim turpis, hendrerit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class
-                        aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam
-                        tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc
-                        ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non,
-                        bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus.
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In
-                        non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.
-                    </p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor
-                        imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-                        Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at,
-                        elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+                    <div class="videos">
+                        <iframe
+                            class="video"
+                            src="https://www.youtube.com/embed/GUTt0qKUDyU"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                        <iframe
+                            class="video"
+                            src="https://www.youtube.com/embed/GUTt0qKUDyU"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                        <iframe
+                            class="video"
+                            src="https://www.youtube.com/embed/GUTt0qKUDyU"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                        <iframe
+                            class="video"
+                            src="https://www.youtube.com/embed/GUTt0qKUDyU"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
+                    </div>
                 </div>
             </section>
 
         </div>
-
 
 
         <!-- Footer -->
