Contenidos de bachillerato retirados por falta de alumnos

--- a/1eso.html
+++ b/1eso.html
@@ -124,10 +124,7 @@
                             <header class="major">
                                 <h3>Unidades</h3>
                             </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
+                            <p>Una lista de todos los temas que se verán a lo largo del curso académico</p>
                             <ul class="actions">
                                 <li><a
                                         href="not-found.html"
@@ -162,10 +159,7 @@
                             <header class="major">
                                 <h3>Recursos</h3>
                             </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
+                            <p>Unas cuantas herramientas muy útiles que os van a servir mientras estudiais</p>
                             <ul class="actions">
                                 <li><a
                                         href="not-found.html"
@@ -200,10 +194,7 @@
                             <header class="major">
                                 <h3>Vídeos</h3>
                             </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
+                            <p>Aquí teneis algunos vídeos que os ayudarán en vuestro aprendizaje.</p>
                             <ul class="actions">
                                 <li><a
                                         href="videos1e.html"
