--- a/2bach.html
+++ b/2bach.html
@@ -84,126 +84,18 @@
         <!-- Main -->
         <div id="main">
 
-            <!-- Two -->
-            <section
-                id="two"
-                class="spotlights"
-            >
-                <section>
-                    <a
-                        href="not-found.html"
-                        class="image"
-                    >
-                        <picture>
-                            <source
-                                srcset="assets/img/pic08.webp"
-                                type="image/webp"
-                            />
-                            <source
-                                srcset="assets/img/pic08.jpg"
-                                type="image/jpg"
-                            />
-                            <img
-                                src="assets/img/pic08.jpg"
-                                alt=""
-                            />
-                        </picture>
-                    </a>
-                    <div class="content">
-                        <div class="inner">
-                            <header class="major">
-                                <h3>Unidades</h3>
-                            </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
-                            <ul class="actions">
-                                <li><a
-                                        href="not-found.html"
-                                        class="button"
-                                    >Ver más</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <a
-                        href="not-found.html"
-                        class="image"
-                    >
-                        <picture>
-                            <source
-                                srcset="assets/img/pic09.webp"
-                                type="image/webp"
-                            />
-                            <source
-                                srcset="assets/img/pic09.jpg"
-                                type="image/jpg"
-                            />
-                            <img
-                                src="assets/img/pic09.jpg"
-                                alt=""
-                            />
-                        </picture>
-                    </a>
-                    <div class="content">
-                        <div class="inner">
-                            <header class="major">
-                                <h3>Recursos</h3>
-                            </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
-                            <ul class="actions">
-                                <li><a
-                                        href="not-found.html"
-                                        class="button"
-                                    >Ver más</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <a
-                        href="not-found.html"
-                        class="image"
-                    >
-                        <picture>
-                            <source
-                                srcset="assets/img/pic10.webp"
-                                type="image/webp"
-                            />
-                            <source
-                                srcset="assets/img/pic10.jpg"
-                                type="image/jpg"
-                            />
-                            <img
-                                src="assets/img/pic10.jpg"
-                                alt=""
-                            />
-                        </picture>
-                    </a>
-                    <div class="content">
-                        <div class="inner">
-                            <header class="major">
-                                <h3>Vídeos</h3>
-                            </header>
-                            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus
-                                condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna
-                                pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et
-                                sagittis tempus.</p>
-                            <ul class="actions">
-                                <li><a
-                                        href="videos2b.html"
-                                        class="button"
-                                    >Ver más</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+            <!-- One -->
+            <section id="one">
+                <div class="inner">
+                    <header class="major">
+                        <h2>Sin alumnos</h2>
+                    </header>
+                    <p>Este curso no ha recibido los suficientes alumnos, por lo que no tiene contenidos para
+                        mostrar.
+                    </p>
+                </div>
             </section>
+
         </div>
         <!-- Footer -->
         <footer id="footer">
