--- a/4eso.html
+++ b/4eso.html
@@ -54,7 +54,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="not-found.html">Unidades</a></li>
                 <li><a href="not-found.html">Recursos</a></li>
-                <li><a href="videos4e.html">Vídeos</a></li>
+                <li><a href="videos/4eso.html">Vídeos</a></li>
             </ul>
         </nav>
 
@@ -196,7 +196,7 @@
                                 sagittis tempus.</p>
                             <ul class="actions">
                                 <li><a
-                                        href="videos4e.html"
+                                        href="videos/4eso.html"
                                         class="button"
                                     >Ver más</a></li>
                             </ul>
